# CUDA-Practice

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
01_Basics/: README.md
01_Basics/01_vector_add/: CMakeLists.txt  vector_add.cu
01_Basics/02_matrix_mul_naive/: CMakeLists.txt  matrix_mul_naive.cu
01_Basics/03_matrix_mul_tiled/: CMakeLists.txt  matrix_mul_tiled.cu
02_Reduction/: README.md
02_Reduction/01_reduce_sum/: CMakeLists.txt  reduce_sum.cu
02_Reduction/02_reduce_optimized/: CMakeLists.txt  reduce_optimized.cu
02_Reduction/03_dot_product/: CMakeLists.txt  dot_product.cu
03_Scan/: README.md
03_Scan/01_prefix_sum/: CMakeLists.txt  prefix_sum.cu
03_Scan/02_segmented_scan/: CMakeLists.txt  segmented_scan.cu
04_GEMM_Optimization/: README.md
04_GEMM_Optimization/01_tiled_gemm/: CMakeLists.txt  tiled_gemm.cu
04_GEMM_Optimization/02_advanced_gemm/: CMakeLists.txt  advanced_gemm.cu
04_GEMM_Optimization/03_register_tiling/: CMakeLists.txt  register_tiling.cu
05_LLM_Ops/: README.md
05_LLM_Ops/01_softmax/: CMakeLists.txt  softmax.cu
05_LLM_Ops/02_layernorm/: CMakeLists.txt  layernorm.cu
05_LLM_Ops/03_flash_attention/: CMakeLists.txt  flash_attention.cu
05_LLM_Ops/04_rope/: CMakeLists.txt  rope.cu
05_LLM_Ops/05_rmsnorm/: CMakeLists.txt  rmsnorm.cu
06_Warp_Primitives/: README.md
06_Warp_Primitives/01_warp_shuffle/: CMakeLists.txt  warp_shuffle.cu
06_Warp_Primitives/02_warp_reduce/: CMakeLists.txt  warp_reduce.cu
06_Warp_Primitives/03_warp_scan/: CMakeLists.txt  warp_scan.cu
07_Quantization/: README.md
07_Quantization/01_fp16_gemm/: CMakeLists.txt  fp16_gemm.cu
07_Quantization/02_int8_gemm/: CMakeLists.txt  int8_gemm.cu
07_Quantization/03_quant_dequant/: CMakeLists.txt  quant_dequant.cu
08_Advanced/: README.md
08_Advanced/01_cuda_graphs/: CMakeLists.txt  cuda_graphs.cu
08_Advanced/02_multi_stream/: CMakeLists.txt  multi_stream.cu
08_Advanced/03_pytorch_extension/: CMakeLists.txt  pytorch_extension.cu
09_Tensor_Core/: README.md
09_Tensor_Core/01_wmma_gemm/: CMakeLists.txt  wmma_gemm.cu
09_Tensor_Core/02_mixed_precision/: CMakeLists.txt  mixed_precision.cu
10_Memory_Optimization/: README.md
10_Memory_Optimization/01_coalesced_access/: CMakeLists.txt  coalesced_access.cu
10_Memory_Optimization/02_bank_conflict/: CMakeLists.txt  bank_conflict.cu
10_Memory_Optimization/03_async_copy/: CMakeLists.txt  async_copy.cu
11_Inference_Optimization/: README.md
11_Inference_Optimization/01_kv_cache/: CMakeLists.txt  kv_cache.cu
11_Inference_Optimization/02_kernel_fusion/: CMakeLists.txt  kernel_fusion.cu
11_Inference_Optimization/03_dynamic_batching/: CMakeLists.txt  dynamic_batching.cu
12_Standard_Libraries/: README.md
12_Standard_Libraries/01_cublas_gemm/: CMakeLists.txt  cublas_gemm.cu
12_Standard_Libraries/02_cufft/: CMakeLists.txt  cufft_example.cu
12_Standard_Libraries/03_thrust/: CMakeLists.txt  thrust_algorithms.cu
13_Performance_Analysis/: README.md
13_Performance_Analysis/01_occupancy/: CMakeLists.txt  occupancy.cu
13_Performance_Analysis/02_roofline/: CMakeLists.txt  roofline.cu
13_Performance_Analysis/03_nsight_profiling/: CMakeLists.txt  nsight_profiling.cu
14_CUTLASS/: README.md
14_CUTLASS/01_cutlass_gemm/: CMakeLists.txt  cutlass_gemm.cu
14_CUTLASS/02_tensorop_gemm/: CMakeLists.txt  tensorop_gemm.cu
14_CUTLASS/03_cute_basics/: CMakeLists.txt  cute_basics.cu
15_Multi_GPU/: README.md
15_Multi_GPU/01_nccl_allreduce/: CMakeLists.txt  nccl_allreduce.cu
Blogs/: 01_Basics_Concepts_and_Tiling.md  02_Reduction_Tree_Algo_and_Coarsening.md  03_Scan_Kogge_Stone_and_MultiBlock.md  04_GEMM_Optimization_Register_Tiling.md  05_LLM_Ops_FlashAttention_and_Norms.md  06_Warp_Primitives_Register_Shuffle.md  07_Quantization_FP16_INT8_dp4a.md  08_Advanced_CUDAGraphs_Streams_Extensions.md  08_Advanced_CUDA_Graph_and_Streams.md  08_Advanced_CUDA_Graphs_and_Streams.md  09_Tensor_Core_WMMA_API_GEMM.md  09_Tensor_Core_WMMA_Mixed_Precision.md  10_Memory_Optimization_Bank_Conflict_Async.md  10_Memory_Optimization_Coalescing_BankConflict.md  11_Inference_Optimization_Fusion_KVCache.md  11_Inference_Optimization_KV_Cache_Fusion.md  12_Standard_Libraries_cuBLAS_cuFFT_Thrust.md  13_Performance_Analysis_Nsight_Metrics.md  13_Performance_Analysis_Nsight_Roofline.md  13_Performance_Analysis_Roofline_Occupancy.md  14_CUTLASS_GEMM_CuTe.md  14_CUTLASS_Performance_CuTe.md  14_CUTLASS_TemplateGEMM_CuTe.md  15_Multi_GPU_NCCL_AllReduce.md  15_Multi_GPU_NCCL_P2P.md  CUDA实践-00-系列导读与学习路线.md  CUDA实践-01-基础概念与分块.md  CUDA实践-02-归约与线程粗化.md  CUDA实践-03-前缀和与多块扫描.md  CUDA实践-04-矩阵乘优化与寄存器分块.md  CUDA实践-05-大模型算子与注意力归一化.md  CUDA实践-06-线程束原语与寄存器通信.md  CUDA实践-07-量化半精度与整数推理.md  CUDA实践-08-多流图执行与扩展开发.md  CUDA实践-09-张量核心与混合精度.md  CUDA实践-10-访存优化与共享内存冲突.md  CUDA实践-11-推理优化融合与键值缓存.md  CUDA实践-12-标准库与工程实践.md  CUDA实践-13-性能分析屋顶线与占用率.md  CUDA实践-14-模板矩阵乘与代数布局.md  (+2 more)
Common/include/: code_abbreviation.h  cuda_utils.cuh  timer.cuh
Results/: 01_Basics.md  02_Reduction.md  03_Scan.md  04_GEMM_Optimization.md  05_LLM_Ops.md  06_Warp_Primitives.md  07_Quantization.md  08_Advanced.md  09_Tensor_Core.md  10_Memory_Optimization.md  11_Inference_Optimization.md  12_Standard_Libraries.md  13_Performance_Analysis.md  14_CUTLASS.md  15_Multi_GPU.md  README.md
